Worked on Python bindings

--- a/pyfwevt-python2/Makefile.am
+++ b/pyfwevt-python2/Makefile.am
@@ -10,6 +10,7 @@ AM_CFLAGS = \
 	-I$(top_srcdir)/common \
 	@LIBCERROR_CPPFLAGS@ \
 	@LIBCDATA_CPPFLAGS@ \
+	@LIBFGUID_CPPFLAGS@ \
 	@LIBFWEVT_DLL_IMPORT@
 
 am_pyfwevt_la_rpath = -rpath $(pyexecdir2)
@@ -21,12 +22,14 @@ BUILT_SOURCES = \
 	pyfwevt_error.c pyfwevt_error.h \
 	pyfwevt_event.c pyfwevt_event.h \
 	pyfwevt_events.c pyfwevt_events.h \
+	pyfwevt_guid.c pyfwevt_guid.h \
 	pyfwevt_integer.c pyfwevt_integer.h \
 	pyfwevt_keyword.c pyfwevt_keyword.h \
 	pyfwevt_keywords.c pyfwevt_keywords.h \
 	pyfwevt_level.c pyfwevt_level.h \
 	pyfwevt_levels.c pyfwevt_levels.h \
 	pyfwevt_libcerror.h \
+	pyfwevt_libfguid.h \
 	pyfwevt_libfwevt.h \
 	pyfwevt_manifest.c pyfwevt_manifest.h \
 	pyfwevt_map.c pyfwevt_map.h \
@@ -49,7 +52,8 @@ nodist_pyfwevt_la_SOURCES = $(BUILT_SOURCES)
 pyfwevt_la_LIBADD = \
 	@LIBCERROR_LIBADD@ \
 	../libfwevt/libfwevt.la \
-	@LIBCDATA_LIBADD@
+	@LIBCDATA_LIBADD@ \
+	@LIBFGUID_LIBADD@
 
 pyfwevt_la_CPPFLAGS = $(PYTHON2_CPPFLAGS)
 pyfwevt_la_LDFLAGS  = -module -avoid-version $(PYTHON2_LDFLAGS)
