--- a/include/libfwevt.h.in
+++ b/include/libfwevt.h.in
@@ -262,6 +262,17 @@ int libfwevt_provider_free(
      libfwevt_provider_t **provider,
      libfwevt_error_t **error );
 
+/* Retrieves the identifier
+ * The identifier is a GUID stored in little-endian and is 16 bytes of size
+ * Returns 1 if successful, 0 if value is not available or -1 on error
+ */
+LIBFWEVT_EXTERN \
+int libfwevt_provider_get_identifier(
+     libfwevt_provider_t *provider,
+     uint8_t *guid_data,
+     size_t guid_data_size,
+     libfwevt_error_t **error );
+
 /* Retrieves the number of channels
  * Returns 1 if successful or -1 on error
  */
