--- a/pyfwevt/Makefile.am
+++ b/pyfwevt/Makefile.am
@@ -4,6 +4,7 @@ AM_CFLAGS = \
 	-I$(top_srcdir)/common \
 	@LIBCERROR_CPPFLAGS@ \
 	@LIBCDATA_CPPFLAGS@ \
+	@LIBFGUID_CPPFLAGS@ \
 	@LIBFWEVT_DLL_IMPORT@
 
 pyexec_LTLIBRARIES = pyfwevt.la
@@ -15,12 +16,14 @@ pyfwevt_la_SOURCES = \
 	pyfwevt_error.c pyfwevt_error.h \
 	pyfwevt_event.c pyfwevt_event.h \
 	pyfwevt_events.c pyfwevt_events.h \
+	pyfwevt_guid.c pyfwevt_guid.h \
 	pyfwevt_integer.c pyfwevt_integer.h \
 	pyfwevt_keyword.c pyfwevt_keyword.h \
 	pyfwevt_keywords.c pyfwevt_keywords.h \
 	pyfwevt_level.c pyfwevt_level.h \
 	pyfwevt_levels.c pyfwevt_levels.h \
 	pyfwevt_libcerror.h \
+	pyfwevt_libfguid.h \
 	pyfwevt_libfwevt.h \
 	pyfwevt_manifest.c pyfwevt_manifest.h \
 	pyfwevt_map.c pyfwevt_map.h \
@@ -39,7 +42,8 @@ pyfwevt_la_SOURCES = \
 pyfwevt_la_LIBADD = \
 	@LIBCERROR_LIBADD@ \
 	../libfwevt/libfwevt.la \
-	@LIBCDATA_LIBADD@
+	@LIBCDATA_LIBADD@ \
+	@LIBFGUID_LIBADD@
 
 pyfwevt_la_CPPFLAGS = $(PYTHON_CPPFLAGS)
 pyfwevt_la_LDFLAGS  = -module -avoid-version $(PYTHON_LDFLAGS)
