--- a/msvscpp/libfwevt/libfwevt.vcproj
+++ b/msvscpp/libfwevt/libfwevt.vcproj
@@ -206,6 +206,10 @@
 				>
 			</File>
 			<File
+				RelativePath="..\..\libfwevt\libfwevt_notify.c"
+				>
+			</File>
+			<File
 				RelativePath="..\..\libfwevt\libfwevt_opcode.c"
 				>
 			</File>
@@ -313,6 +317,10 @@
 			</File>
 			<File
 				RelativePath="..\..\libfwevt\libfwevt_map.h"
+				>
+			</File>
+			<File
+				RelativePath="..\..\libfwevt\libfwevt_notify.h"
 				>
 			</File>
 			<File
