--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -3,6 +3,24 @@ name: build
 on: [push, pull_request]
 permissions: read-all
 jobs:
+  build_freebsd:
+    # FreeBSD support is provided via virtualization on MacOS 12
+    # See https://github.com/vmactions/freebsd-vm#under-the-hood.
+    runs-on: macos-12
+    steps:
+    - uses: actions/checkout@v3
+    - name: Building from source
+      id: build_freebsd
+      uses: vmactions/freebsd-vm@v0
+      with:
+        usesh: true
+        mem: 4096
+        # Note that the test scripts require bash
+        prepare: |
+          pkg install -y autoconf automake bash gettext git libtool pkgconf
+        run: |
+          tests/build.sh
+          tests/runtests.sh
   build_ubuntu:
     runs-on: ubuntu-22.04
     strategy:
@@ -129,7 +147,7 @@ jobs:
         for DIRECTORY in `find . -maxdepth 1 -type d`; do \
           (cd ${DIRECTORY} && find . -maxdepth 1 -name \*.gcno -type f -exec gcov -pb {} \;) \
         done
-    - name: Upload coverage data
-      run: |
-        git clone https://github.com/codecov/codecov-bash.git ../codecov-bash
-        /bin/bash ../codecov-bash/codecov -n linux-${{ matrix.architecture }}-gcc-no-optimization -X gcov;
+    - name: Upload coverage report to Codecov
+      uses: codecov/codecov-action@v3
+      with:
+        name: linux-${{ matrix.architecture }}-gcc-no-optimization
