--- a/appveyor.yml
+++ b/appveyor.yml
@@ -8,77 +8,77 @@ environment:
     VisualStudioVersion: 9.0
     platform: Win32
     configuration: Release
-    PythonPath: "C:\\Python37"
+    PYTHON_PATH: "C:\\Python37"
   - TARGET: vs2010
     BUILD_ENVIRONMENT: msbuild
     APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2013
     VisualStudioVersion: 10.0
     platform: Win32
     configuration: Release
-    PythonPath: "C:\\Python37"
+    PYTHON_PATH: "C:\\Python37"
   - TARGET: vs2012
     BUILD_ENVIRONMENT: msbuild
     APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2013
     VisualStudioVersion: 11.0
     platform: Win32
     configuration: Release
-    PythonPath: "C:\\Python37"
+    PYTHON_PATH: "C:\\Python37"
   - TARGET: vs2013
     BUILD_ENVIRONMENT: msbuild
     APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2013
     VisualStudioVersion: 12.0
     platform: Win32
     configuration: Release
-    PythonPath: "C:\\Python37"
+    PYTHON_PATH: "C:\\Python37"
   - TARGET: vs2015
     BUILD_ENVIRONMENT: msbuild
     APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2015
     VisualStudioVersion: 14.0
     platform: Win32
     configuration: Release
-    PythonPath: "C:\\Python38"
+    PYTHON_PATH: "C:\\Python38"
   - TARGET: vs2017
     BUILD_ENVIRONMENT: msbuild
     APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2017
     VisualStudioVersion: 15.0
     platform: Win32
     configuration: Release
-    PythonPath: "C:\\Python38"
+    PYTHON_PATH: "C:\\Python38"
   - TARGET: vs2019
     BUILD_ENVIRONMENT: msbuild
     APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2019
     VisualStudioVersion: 16.0
     platform: Win32
     configuration: Release
-    PythonPath: "C:\\Python311"
+    PYTHON_PATH: "C:\\Python311"
   - TARGET: vs2022
     BUILD_ENVIRONMENT: msbuild
     APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2022
     VisualStudioVersion: 17.0
     platform: Win32
     configuration: Release
-    PythonPath: "C:\\Python311"
+    PYTHON_PATH: "C:\\Python311"
   - TARGET: vs2022-vsdebug
     BUILD_ENVIRONMENT: msbuild
     APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2022
     VisualStudioVersion: 17.0
     platform: Win32
     configuration: VSDebug
-    PythonPath: "C:\\Python311"
+    PYTHON_PATH: "C:\\Python311"
   - TARGET: vs2022-x64
     BUILD_ENVIRONMENT: msbuild
     APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2022
     VisualStudioVersion: 17.0
     platform: x64
     configuration: Release
-    PythonPath: "C:\\Python311"
+    PYTHON_PATH: "C:\\Python311"
   - TARGET: vs2022-python
     BUILD_ENVIRONMENT: msbuild
     APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2022
     VisualStudioVersion: 17.0
     platform: x64
     configuration: Release
-    PythonPath: "C:\\Python311-x64"
+    PYTHON_PATH: "C:\\Python311-x64"
   - TARGET: macos-x64-clang
     BUILD_ENVIRONMENT: xcode
     APPVEYOR_BUILD_WORKER_IMAGE: macos-monterey
@@ -179,7 +179,6 @@ environment:
     LDFLAGS: "--coverage"
 
 install:
-- cmd: git clone https://github.com/codecov/codecov-bash.git ..\codecov-bash
 - cmd: if [%BUILD_ENVIRONMENT%]==[msbuild] (
     git clone https://github.com/libyal/vstools.git ..\vstools )
 - sh: if test ${BUILD_ENVIRONMENT} = "python-tox" || test ${BUILD_ENVIRONMENT} = "xcode"; then brew update -q; fi
@@ -193,26 +192,28 @@ install:
     C:\cygwin64\setup-x86_64.exe -qgnNdO -l C:\cygwin64\var\cache\setup -R c:\cygwin64 -s http://cygwin.mirror.constant.com -P gettext-devel -P wget -P python3-devel )
 - cmd: if [%BUILD_ENVIRONMENT%]==[mingw-w64] (
     C:\msys64\usr\bin\pacman -S --noconfirm --needed autoconf automake gcc gettext-devel libtool make )
+- ps: If ( ( "cygwin64-gcc-no-optimization", "mingw-w64-gcc-no-optimization" ).Contains( $env:TARGET ) ) {
+    $ProgressPreference = 'SilentlyContinue'; Invoke-WebRequest -Uri https://uploader.codecov.io/latest/windows/codecov.exe -Outfile ..\codecov.exe }
 
 build_script:
 - ps: If ($env:BUILD_ENVIRONMENT -eq "msbuild" -or ($env:BUILD_ENVIRONMENT -eq "python" -and $isWindows)) {
     .\synclibs.ps1;
     .\autogen.ps1 }
 - ps: If ($env:TARGET -eq "vs2008") {
-    .\build.ps1 -VisualStudioVersion 2008 -PythonPath $env:PythonPath -VSToolsOptions "--no-python-dll" }
+    .\build.ps1 -VisualStudioVersion 2008 -PythonPath $env:PYTHON_PATH -VSToolsOptions "--no-python-dll" }
 - ps: If ( ( "vs2010", "vs2012", "vs2013", "vs2015" ).Contains( $env:TARGET ) ) {
-    .\build.ps1 -VisualStudioVersion $env:TARGET.Substring(2, 4) -Configuration $env:CONFIGURATION -Platform $env:PLATFORM -PythonPath $env:PythonPath -VSToolsOptions "--extend-with-x64 --no-python-dll" }
+    .\build.ps1 -VisualStudioVersion $env:TARGET.Substring(2, 4) -Configuration $env:CONFIGURATION -Platform $env:PLATFORM -PythonPath $env:PYTHON_PATH -VSToolsOptions "--extend-with-x64 --no-python-dll" }
 - ps: If ( ( "vs2017", "vs2019", "vs2022", "vs2022-vsdebug", "vs2022-x64" ).Contains( $env:TARGET ) ) {
-    .\build.ps1 -VisualStudioVersion $env:TARGET.Substring(2, 4) -Configuration $env:CONFIGURATION -Platform $env:PLATFORM -PythonPath $env:PythonPath -VSToolsOptions "--extend-with-x64 --no-python-dll --with-dokany" }
+    .\build.ps1 -VisualStudioVersion $env:TARGET.Substring(2, 4) -Configuration $env:CONFIGURATION -Platform $env:PLATFORM -PythonPath $env:PYTHON_PATH -VSToolsOptions "--extend-with-x64 --no-python-dll --with-dokany" }
 - ps: If ($env:TARGET -eq "vs2022-python") {
-    .\build.ps1 -VisualStudioVersion $env:TARGET.Substring(2, 4) -Configuration $env:CONFIGURATION -Platform $env:PLATFORM -PythonPath $env:PythonPath -VSToolsOptions "--extend-with-x64 --python-path $env:PythonPath --with-dokany" }
+    .\build.ps1 -VisualStudioVersion $env:TARGET.Substring(2, 4) -Configuration $env:CONFIGURATION -Platform $env:PLATFORM -PythonPath $env:PYTHON_PATH -VSToolsOptions "--extend-with-x64 --python-path $env:PYTHON_PATH --with-dokany" }
 - sh: if test ${BUILD_ENVIRONMENT} = "xcode"; then export PATH="/usr/local/opt/gettext/bin:$PATH"; export SED="/usr/local/bin/gsed"; tests/build.sh ${CONFIGURE_OPTIONS}; fi
 - cmd: if [%BUILD_ENVIRONMENT%]==[python] (
     "%PYTHON%" setup.py bdist_wheel )
 - sh: if test ${BUILD_ENVIRONMENT} = "python-tox"; then export PATH="/usr/local/opt/gettext/bin:$PATH"; export SED="/usr/local/bin/gsed"; ./synclibs.sh && ./autogen.sh && ./configure --disable-nls --disable-shared-libs && make >/dev/null && tox -e${TOXENV}; fi
 - cmd: if [%BUILD_ENVIRONMENT%]==[cygwin64] (
     xcopy /i /q /s C:\projects\libfwevt C:\cygwin64\home\appveyor\libfwevt &&
-    C:\cygwin64\bin\bash -e -l -c "cd libfwevt && wget 'http://git.savannah.gnu.org/gitweb/?p=config.git;a=blob_plain;f=config.guess;hb=HEAD' -O './config.guess' && wget 'http://git.savannah.gnu.org/gitweb/?p=config.git;a=blob_plain;f=config.sub;hb=HEAD' -O './config.sub'" &&
+    C:\cygwin64\bin\bash -e -l -c "cd libfwevt && wget -q 'http://git.savannah.gnu.org/gitweb/?p=config.git;a=blob_plain;f=config.guess;hb=HEAD' -O './config.guess' && wget -q 'http://git.savannah.gnu.org/gitweb/?p=config.git;a=blob_plain;f=config.sub;hb=HEAD' -O './config.sub'" &&
     C:\cygwin64\bin\bash -e -l -c "cd libfwevt && tests/build.sh ${CONFIGURE_OPTIONS}" )
 - cmd: if [%BUILD_ENVIRONMENT%]==[mingw-w64] (
     xcopy /i /q /s C:\projects\libfwevt C:\msys64\home\appveyor\libfwevt &&
@@ -230,9 +231,12 @@ test_script:
     C:\msys64\usr\bin\bash -l -c "cd libfwevt && tests/runtests.sh" )
 
 after_test:
+- cmd: if [%TARGET%]==[cygwin64-gcc-no-optimization] (
+    C:\cygwin64\bin\bash -e -l -c "cd libfwevt && for DIRECTORY in `find . -maxdepth 1 -type d`; do (cd ${DIRECTORY} && find . -maxdepth 1 -name \*.gcno -type f -exec gcov -pb {} \;) done" &&
+    C:\projects\codecov.exe -R \cygwin64\home\appveyor\libfwevt --name %TARGET% )
 - cmd: if [%TARGET%]==[mingw-w64-gcc-no-optimization] (
-    copy C:\projects\codecov-bash\codecov C:\msys64\home\appveyor\libfwevt\codecov.sh &&
-    C:\msys64\usr\bin\bash -e -l -c "cd libfwevt && chmod a+x ./codecov.sh && ./codecov.sh -n ${TARGET}" )
+    C:\msys64\usr\bin\bash -e -l -c "cd libfwevt && for DIRECTORY in `find . -maxdepth 1 -type d`; do (cd ${DIRECTORY} && find . -maxdepth 1 -name \*.gcno -type f -exec gcov -pb {} \;) done" &&
+    C:\projects\codecov.exe -R \msys64\home\appveyor\libfwevt --name %TARGET% )
 
 artifacts:
 - path: dist\*.whl
