--- a/Makefile.am
+++ b/Makefile.am
@@ -41,6 +41,9 @@ PKGCONFIG_FILES = \
 	libfwevt.pc.in
 
 SETUP_PY_FILES = \
+	pyproject.toml \
+	setup.cfg \
+	setup.cfg.in \
 	setup.py
 
 SPEC_FILES = \
