--- a/configure.ac
+++ b/configure.ac
@@ -2,7 +2,7 @@ AC_PREREQ([2.71])
 
 AC_INIT(
  [libfwevt],
- [20230626],
+ [20230930],
  [joachim.metz@gmail.com])
 
 AC_CONFIG_SRCDIR(
@@ -165,6 +165,7 @@ AC_CONFIG_FILES([dpkg/changelog])
 AC_CONFIG_FILES([libfwevt/libfwevt.rc])
 AC_CONFIG_FILES([libfwevt.pc])
 AC_CONFIG_FILES([libfwevt.spec])
+AC_CONFIG_FILES([setup.cfg])
 dnl Generate a source configuration file
 AC_CONFIG_HEADERS([common/config.h])
 
