--- a/pyfwevt-python3/Makefile.am
+++ b/pyfwevt-python3/Makefile.am
@@ -67,8 +67,8 @@ MAINTAINERCLEANFILES = \
 	Makefile.in
 
 clean-local:
-	/bin/rm -f pyfwevt*.[ch]
+	-rm -f pyfwevt*.[ch]
 
 distclean: clean
-	/bin/rm -f Makefile
+	-rm -f Makefile
 
