Applied updates and changes for deployment

--- a/configure.ac
+++ b/configure.ac
@@ -2,7 +2,7 @@ AC_PREREQ([2.71])
 
 AC_INIT(
  [libfwevt],
- [20231112],
+ [20231119],
  [joachim.metz@gmail.com])
 
 AC_CONFIG_SRCDIR(
@@ -92,7 +92,7 @@ dnl Check if libfwevt Python bindings (pyfwevt) required headers and functions a
 AX_PYTHON_CHECK_ENABLE
 
 AS_IF(
-  [test "x${ac_cv_enable_python}" != xno || test "x${ac_cv_enable_python2}" != xno || test "x${ac_cv_enable_python3}" != xno],
+  [test "x${ac_cv_enable_python}" != xno],
   [dnl Headers included in pyfwevt/pyfwevt_error.c
   AC_CHECK_HEADERS([stdarg.h varargs.h])
 
@@ -146,8 +146,6 @@ AC_CONFIG_FILES([libfguid/Makefile])
 AC_CONFIG_FILES([libfvalue/Makefile])
 AC_CONFIG_FILES([libfwevt/Makefile])
 AC_CONFIG_FILES([pyfwevt/Makefile])
-AC_CONFIG_FILES([pyfwevt-python2/Makefile])
-AC_CONFIG_FILES([pyfwevt-python3/Makefile])
 AC_CONFIG_FILES([po/Makefile.in])
 AC_CONFIG_FILES([po/Makevars])
 AC_CONFIG_FILES([manuals/Makefile])
