--- a/include/libfwevt.h.in
+++ b/include/libfwevt.h.in
@@ -136,6 +136,53 @@ int libfwevt_channel_free(
      libfwevt_channel_t **channel,
      libfwevt_error_t **error );
 
+/* Retrieves the identifier
+ * Returns 1 if successful or -1 on error
+ */
+LIBFWEVT_EXTERN \
+int libfwevt_channel_get_identifier(
+     libfwevt_channel_t *channel,
+     uint32_t *identifier,
+     libfwevt_error_t **error );
+
+/* Retrieves the size of the UTF-8 formatted name
+ * Returns 1 if successful, 0 if not available or -1 on error
+ */
+LIBFWEVT_EXTERN \
+int libfwevt_channel_get_utf8_name_size(
+     libfwevt_channel_t *channel,
+     size_t *utf8_string_size,
+     libfwevt_error_t **error );
+
+/* Retrieves the UTF-8 formatted name
+ * Returns 1 if successful, 0 if not available or -1 on error
+ */
+LIBFWEVT_EXTERN \
+int libfwevt_channel_get_utf8_name(
+     libfwevt_channel_t *channel,
+     uint8_t *utf8_string,
+     size_t utf8_string_size,
+     libfwevt_error_t **error );
+
+/* Retrieves the size of the UTF-16 formatted name
+ * Returns 1 if successful, 0 if not available or -1 on error
+ */
+LIBFWEVT_EXTERN \
+int libfwevt_channel_get_utf16_name_size(
+     libfwevt_channel_t *channel,
+     size_t *utf16_string_size,
+     libfwevt_error_t **error );
+
+/* Retrieves the UTF-16 formatted name
+ * Returns 1 if successful, 0 if not available or -1 on error
+ */
+LIBFWEVT_EXTERN \
+int libfwevt_channel_get_utf16_name(
+     libfwevt_channel_t *channel,
+     uint16_t *utf16_string,
+     size_t utf16_string_size,
+     libfwevt_error_t **error );
+
 /* -------------------------------------------------------------------------
  * Event functions
  * ------------------------------------------------------------------------- */
@@ -595,6 +642,17 @@ LIBFWEVT_EXTERN \
 int libfwevt_template_get_size(
      libfwevt_template_t *wevt_template,
      uint32_t *size,
+     libfwevt_error_t **error );
+
+/* Retrieves the identifier
+ * The identifier is a GUID stored in little-endian and is 16 bytes of size
+ * Returns 1 if successful, 0 if value is not available or -1 on error
+ */
+LIBFWEVT_EXTERN \
+int libfwevt_template_get_identifier(
+     libfwevt_template_t *template,
+     uint8_t *guid_data,
+     size_t guid_data_size,
      libfwevt_error_t **error );
 
 /* -------------------------------------------------------------------------
