--- a/include/libfwevt.h.in
+++ b/include/libfwevt.h.in
@@ -260,7 +260,7 @@ int libfwevt_level_free(
  * ------------------------------------------------------------------------- */
 
 /* Creates a manifest
- * Make sure the value channel is referencing, is set to NULL
+ * Make sure the value manifest is referencing, is set to NULL
  * Returns 1 if successful or -1 on error
  */
 LIBFWEVT_EXTERN \
@@ -650,9 +650,96 @@ int libfwevt_template_get_size(
  */
 LIBFWEVT_EXTERN \
 int libfwevt_template_get_identifier(
-     libfwevt_template_t *template,
+     libfwevt_template_t *wevt_template,
      uint8_t *guid_data,
      size_t guid_data_size,
+     libfwevt_error_t **error );
+
+/* Retrieves the number of items
+ * Returns 1 if successful or -1 on error
+ */
+LIBFWEVT_EXTERN \
+int libfwevt_template_get_number_of_items(
+     libfwevt_template_t *wevt_template,
+     int *number_of_items,
+     libfwevt_error_t **error );
+
+/* Retrieves a specific item
+ * Returns 1 if successful or -1 on error
+ */
+LIBFWEVT_EXTERN \
+int libfwevt_template_get_item_by_index(
+     libfwevt_template_t *wevt_template,
+     int item_index,
+     libfwevt_template_item_t **item,
+     libfwevt_error_t **error );
+
+/* -------------------------------------------------------------------------
+ * Template item functions
+ * ------------------------------------------------------------------------- */
+
+/* Frees a template item
+ * Returns 1 if successful or -1 on error
+ */
+LIBFWEVT_EXTERN \
+int libfwevt_template_item_free(
+     libfwevt_template_item_t **template_item,
+     libfwevt_error_t **error );
+
+/* Retrieves the input data type
+ * Returns 1 if successful or -1 on error
+ */
+LIBFWEVT_EXTERN \
+int libfwevt_template_item_get_input_data_type(
+     libfwevt_template_item_t *template_item,
+     uint8_t *input_data_type,
+     libfwevt_error_t **error );
+
+/* Retrieves the output data type
+ * Returns 1 if successful or -1 on error
+ */
+LIBFWEVT_EXTERN \
+int libfwevt_template_item_get_output_data_type(
+     libfwevt_template_item_t *template_item,
+     uint8_t *output_data_type,
+     libfwevt_error_t **error );
+
+/* Retrieves the size of the UTF-8 formatted name
+ * Returns 1 if successful, 0 if not available or -1 on error
+ */
+LIBFWEVT_EXTERN \
+int libfwevt_template_item_get_utf8_name_size(
+     libfwevt_template_item_t *template_item,
+     size_t *utf8_string_size,
+     libfwevt_error_t **error );
+
+/* Retrieves the UTF-8 formatted name
+ * Returns 1 if successful, 0 if not available or -1 on error
+ */
+LIBFWEVT_EXTERN \
+int libfwevt_template_item_get_utf8_name(
+     libfwevt_template_item_t *template_item,
+     uint8_t *utf8_string,
+     size_t utf8_string_size,
+     libfwevt_error_t **error );
+
+/* Retrieves the size of the UTF-16 formatted name
+ * Returns 1 if successful, 0 if not available or -1 on error
+ */
+LIBFWEVT_EXTERN \
+int libfwevt_template_item_get_utf16_name_size(
+     libfwevt_template_item_t *template_item,
+     size_t *utf16_string_size,
+     libfwevt_error_t **error );
+
+/* Retrieves the UTF-16 formatted name
+ * Returns 1 if successful, 0 if not available or -1 on error
+ */
+LIBFWEVT_EXTERN \
+int libfwevt_template_item_get_utf16_name(
+     libfwevt_template_item_t *template_item,
+     uint16_t *utf16_string,
+     size_t utf16_string_size,
      libfwevt_error_t **error );
 
 /* -------------------------------------------------------------------------
@@ -660,7 +747,7 @@ int libfwevt_template_get_identifier(
  * ------------------------------------------------------------------------- */
 
 /* Creates an XML document
- * Make sure the value channel is referencing, is set to NULL
+ * Make sure the value xml_document is referencing, is set to NULL
  * Returns 1 if successful or -1 on error
  */
 LIBFWEVT_EXTERN \
