--- a/libfwevt/Makefile.am
+++ b/libfwevt/Makefile.am
@@ -1,6 +1,6 @@
 AM_CPPFLAGS = \
-	-I$(top_srcdir)/include \
-	-I$(top_srcdir)/common \
+	-I../include -I$(top_srcdir)/include \
+	-I../common -I$(top_srcdir)/common \
 	@LIBCERROR_CPPFLAGS@ \
 	@LIBCTHREADS_CPPFLAGS@ \
 	@LIBCDATA_CPPFLAGS@ \
@@ -65,13 +65,11 @@ EXTRA_DIST = \
 	libfwevt.rc \
 	libfwevt.rc.in
 
-MAINTAINERCLEANFILES = \
+DISTCLEANFILES = \
+	libfwevt_definitions.h \
+	libfwevt.rc \
+	Makefile \
 	Makefile.in
-
-distclean: clean
-	-rm -f libfwevt_definitions.h
-	-rm -f libfwevt.rc
-	-rm -f Makefile
 
 sources-local: $(BUILT_SOURCES)
 
