--- a/manuals/Makefile.am
+++ b/manuals/Makefile.am
@@ -4,9 +4,7 @@ man_MANS = \
 EXTRA_DIST = \
 	libfwevt.3
 
-MAINTAINERCLEANFILES = \
+DISTCLEANFILES = \
+	Makefile \
 	Makefile.in
-
-distclean: clean
-	-rm -f Makefile
 
