--- a/ossfuzz/Makefile.am
+++ b/ossfuzz/Makefile.am
@@ -1,7 +1,7 @@
 if HAVE_LIB_FUZZING_ENGINE
 AM_CPPFLAGS = \
-	-I$(top_srcdir)/include \
-	-I$(top_srcdir)/common
+	-I../include -I$(top_srcdir)/include \
+	-I../common -I$(top_srcdir)/common
 
 bin_PROGRAMS = \
 	manifest_fuzzer \
@@ -24,11 +24,9 @@ xml_document_fuzzer_LDADD = \
 	../libfwevt/libfwevt.la
 endif
 
-MAINTAINERCLEANFILES = \
+DISTCLEANFILES = \
+	Makefile \
 	Makefile.in
-
-distclean: clean
-	-rm -f Makefile
 
 splint-local:
 	@echo "Running splint on manifest_fuzzer ..."
