--- a/include/libfwevt/definitions.h.in
+++ b/include/libfwevt/definitions.h.in
@@ -43,6 +43,9 @@ enum LIBFWEVT_ENDIAN
 enum LIBFWEVT_XML_DOCUMENT_READ_FLAGS
 {
 	LIBFWEVT_XML_DOCUMENT_READ_FLAG_HAS_DATA_OFFSETS		= 0x01,
+
+	/* The dependency identifiers flag has been deprecated and is no longer needed
+	 */
 	LIBFWEVT_XML_DOCUMENT_READ_FLAG_HAS_DEPENDENCY_IDENTIFIERS	= 0x02
 };
 
