--- a/include/libfwevt.h.in
+++ b/include/libfwevt.h.in
@@ -858,6 +858,14 @@ int libfwevt_xml_document_debug_print(
  * XML tag functions
  * ------------------------------------------------------------------------- */
 
+/* Frees a XML tag
+ * Returns 1 if successful or -1 on error
+ */
+LIBFWEVT_EXTERN \
+int libfwevt_xml_tag_free(
+     libfwevt_xml_tag_t **xml_tag,
+     libfwevt_error_t **error );
+
 /* Retrieves the size of the UTF-8 formatted name
  * Returns 1 if successful or -1 on error
  */
@@ -1023,6 +1031,102 @@ LIBFWEVT_EXTERN \
 int libfwevt_xml_tag_get_flags(
      libfwevt_xml_tag_t *xml_tag,
      uint8_t *flags,
+     libfwevt_error_t **error );
+
+/* -------------------------------------------------------------------------
+ * XML value functions
+ * ------------------------------------------------------------------------- */
+
+/* Frees a XML value
+ * Returns 1 if successful or -1 on error
+ */
+LIBFWEVT_EXTERN \
+int libfwevt_xml_value_free(
+     libfwevt_xml_value_t **xml_value,
+     libfwevt_error_t **error );
+
+/* Retrieves the data size
+ * Returns 1 if successful or -1 on error
+ */
+LIBFWEVT_EXTERN \
+int libfwevt_xml_value_get_data_size(
+     libfwevt_xml_value_t *xml_value,
+     size_t *data_size,
+     libfwevt_error_t **error );
+
+/* Copies the data
+ * Returns 1 if successful or -1 on error
+ */
+LIBFWEVT_EXTERN \
+int libfwevt_xml_value_copy_data(
+     libfwevt_xml_value_t *xml_value,
+     uint8_t *data,
+     size_t data_size,
+     libfwevt_error_t **error );
+
+/* Copies the value data to an 8-bit value
+ * Returns 1 if successful, 0 if size value not be retrieved or -1 on error
+ */
+LIBFWEVT_EXTERN \
+int libfwevt_xml_value_copy_to_8bit(
+     libfwevt_xml_value_t *xml_value,
+     uint8_t *value_8bit,
+     libfwevt_error_t **error );
+
+/* Copies the value data to an 32-bit value
+ * Returns 1 if successful, 0 if size value not be retrieved or -1 on error
+ */
+LIBFWEVT_EXTERN \
+int libfwevt_xml_value_copy_to_32bit(
+     libfwevt_xml_value_t *xml_value,
+     uint32_t *value_32bit,
+     libfwevt_error_t **error );
+
+/* Copies the value data to an 64-bit value
+ * Returns 1 if successful, 0 if size value not be retrieved or -1 on error
+ */
+LIBFWEVT_EXTERN \
+int libfwevt_xml_value_copy_to_64bit(
+     libfwevt_xml_value_t *xml_value,
+     uint64_t *value_64bit,
+     libfwevt_error_t **error );
+
+/* Retrieves the size of an UTF-8 encoded string of the value data
+ * Returns 1 if successful, 0 if size value not be retrieved or -1 on error
+ */
+LIBFWEVT_EXTERN \
+int libfwevt_xml_value_get_utf8_string_size(
+     libfwevt_xml_value_t *xml_value,
+     size_t *utf8_string_size,
+     libfwevt_error_t **error );
+
+/* Copies the value data to an UTF-8 encoded string
+ * Returns 1 if successful, 0 if size value not be retrieved or -1 on error
+ */
+LIBFWEVT_EXTERN \
+int libfwevt_xml_value_copy_to_utf8_string(
+     libfwevt_xml_value_t *xml_value,
+     uint8_t *utf8_string,
+     size_t utf8_string_size,
+     libfwevt_error_t **error );
+
+/* Retrieves the size of an UTF-16 encoded string of the value data
+ * Returns 1 if successful, 0 if size value not be retrieved or -1 on error
+ */
+LIBFWEVT_EXTERN \
+int libfwevt_xml_value_get_utf16_string_size(
+     libfwevt_xml_value_t *xml_value,
+     size_t *utf16_string_size,
+     libfwevt_error_t **error );
+
+/* Copies the value data to an UTF-16 encoded string
+ * Returns 1 if successful, 0 if size value not be retrieved or -1 on error
+ */
+LIBFWEVT_EXTERN \
+int libfwevt_xml_value_copy_to_utf16_string(
+     libfwevt_xml_value_t *xml_value,
+     uint16_t *utf16_string,
+     size_t utf16_string_size,
      libfwevt_error_t **error );
 
 #if defined( __cplusplus )
