--- a/include/libfwevt/types.h.in
+++ b/include/libfwevt/types.h.in
@@ -215,6 +215,7 @@ typedef intptr_t libfwevt_template_item_t;
 typedef intptr_t libfwevt_xml_document_t;
 typedef intptr_t libfwevt_xml_tag_t;
 typedef intptr_t libfwevt_xml_template_value_t;
+typedef intptr_t libfwevt_xml_value_t;
 
 #ifdef __cplusplus
 }
