--- a/include/libfwevt.h.in
+++ b/include/libfwevt.h.in
@@ -904,9 +904,19 @@ int libfwevt_xml_tag_get_utf16_name(
      size_t utf16_string_size,
      libfwevt_error_t **error );
 
+/* Retrieves the XML value
+ * Returns 1 if successful or -1 on error
+ */
+LIBFWEVT_EXTERN \
+int libfwevt_xml_tag_get_value(
+     libfwevt_xml_tag_t *xml_tag,
+     libfwevt_xml_value_t **xml_value,
+     libfwevt_error_t **error );
+
 /* Retrieves the size of the UTF-8 formatted value
  * Returns 1 if successful or -1 on error
  */
+LIBFWEVT_DEPRECATED \
 LIBFWEVT_EXTERN \
 int libfwevt_xml_tag_get_utf8_value_size(
      libfwevt_xml_tag_t *xml_tag,
@@ -916,6 +926,7 @@ int libfwevt_xml_tag_get_utf8_value_size(
 /* Retrieves the UTF-8 formatted value
  * Returns 1 if successful or -1 on error
  */
+LIBFWEVT_DEPRECATED \
 LIBFWEVT_EXTERN \
 int libfwevt_xml_tag_get_utf8_value(
      libfwevt_xml_tag_t *xml_tag,
@@ -926,6 +937,7 @@ int libfwevt_xml_tag_get_utf8_value(
 /* Retrieves the size of the UTF-16 formatted value
  * Returns 1 if successful or -1 on error
  */
+LIBFWEVT_DEPRECATED \
 LIBFWEVT_EXTERN \
 int libfwevt_xml_tag_get_utf16_value_size(
      libfwevt_xml_tag_t *xml_tag,
@@ -935,6 +947,7 @@ int libfwevt_xml_tag_get_utf16_value_size(
 /* Retrieves the UTF-16 formatted value
  * Returns 1 if successful or -1 on error
  */
+LIBFWEVT_DEPRECATED \
 LIBFWEVT_EXTERN \
 int libfwevt_xml_tag_get_utf16_value(
      libfwevt_xml_tag_t *xml_tag,
