Worked on format support

--- a/.gitignore
+++ b/.gitignore
@@ -130,6 +130,7 @@ stamp-h[1-9]
 /setup.cfg
 /tests/*.exe
 /tests/fwevt_test_channel
+/tests/fwevt_test_date_time
 /tests/fwevt_test_error
 /tests/fwevt_test_event
 /tests/fwevt_test_keyword
