--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -36,6 +36,7 @@ EXTRA_DIST = \
 
 check_PROGRAMS = \
 	fwevt_test_channel \
+	fwevt_test_date_time \
 	fwevt_test_error \
 	fwevt_test_event \
 	fwevt_test_keyword \
@@ -64,6 +65,17 @@ fwevt_test_channel_SOURCES = \
 	fwevt_test_unused.h
 
 fwevt_test_channel_LDADD = \
+	../libfwevt/libfwevt.la \
+	@LIBCERROR_LIBADD@
+
+fwevt_test_date_time_SOURCES = \
+	fwevt_test_date_time.c \
+	fwevt_test_libcerror.h \
+	fwevt_test_libfwevt.h \
+	fwevt_test_macros.h \
+	fwevt_test_unused.h
+
+fwevt_test_date_time_LDADD = \
 	../libfwevt/libfwevt.la \
 	@LIBCERROR_LIBADD@
 
