--- a/msvscpp/Makefile.am
+++ b/msvscpp/Makefile.am
@@ -1,5 +1,6 @@
 MSVSCPP_FILES = \
 	fwevt_test_channel/fwevt_test_channel.vcproj \
+	fwevt_test_date_time/fwevt_test_date_time.vcproj \
 	fwevt_test_error/fwevt_test_error.vcproj \
 	fwevt_test_event/fwevt_test_event.vcproj \
 	fwevt_test_keyword/fwevt_test_keyword.vcproj \
