Code clean up and worked on tests

--- a/.codecov.yml
+++ b/.codecov.yml
@@ -13,6 +13,6 @@ coverage:
     - "libcthreads/*"
     - "libfdatetime/*"
     - "libfguid/*"
-    - "libfvalue/*"
+    - "libfwnt/*"
     - "libuna/*"
     - "tests/*"
