--- a/include/libfwevt.h.in
+++ b/include/libfwevt.h.in
@@ -1077,36 +1077,6 @@ int libfwevt_xml_value_copy_data(
      size_t data_size,
      libfwevt_error_t **error );
 
-/* Copies the value data to an 8-bit value
- * Returns 1 if successful, 0 if value not be retrieved or -1 on error
- */
-LIBFWEVT_DEPRECATED \
-LIBFWEVT_EXTERN \
-int libfwevt_xml_value_copy_to_8bit(
-     libfwevt_xml_value_t *xml_value,
-     uint8_t *value_8bit,
-     libfwevt_error_t **error );
-
-/* Copies the value data to an 32-bit value
- * Returns 1 if successful, 0 if value not be retrieved or -1 on error
- */
-LIBFWEVT_DEPRECATED \
-LIBFWEVT_EXTERN \
-int libfwevt_xml_value_copy_to_32bit(
-     libfwevt_xml_value_t *xml_value,
-     uint32_t *value_32bit,
-     libfwevt_error_t **error );
-
-/* Copies the value data to an 64-bit value
- * Returns 1 if successful, 0 if value not be retrieved or -1 on error
- */
-LIBFWEVT_DEPRECATED \
-LIBFWEVT_EXTERN \
-int libfwevt_xml_value_copy_to_64bit(
-     libfwevt_xml_value_t *xml_value,
-     uint64_t *value_64bit,
-     libfwevt_error_t **error );
-
 /* Retrieves the value data as a 8-bit integer value
  * Returns 1 if successful, 0 if value not be retrieved or -1 on error
  */
@@ -1144,8 +1114,9 @@ int libfwevt_value_get_data_as_filetime(
      libfwevt_error_t **error );
 
 /* Retrieves the size of an UTF-8 encoded string of the value data
- * Returns 1 if successful, 0 if value not be retrieved or -1 on error
+ * Returns 1 if successful or -1 on error
  */
+LIBFWEVT_DEPRECATED \
 LIBFWEVT_EXTERN \
 int libfwevt_xml_value_get_utf8_string_size(
      libfwevt_xml_value_t *xml_value,
@@ -1153,8 +1124,9 @@ int libfwevt_xml_value_get_utf8_string_size(
      libfwevt_error_t **error );
 
 /* Copies the value data to an UTF-8 encoded string
- * Returns 1 if successful, 0 if value not be retrieved or -1 on error
+ * Returns 1 if successful or -1 on error
  */
+LIBFWEVT_DEPRECATED \
 LIBFWEVT_EXTERN \
 int libfwevt_xml_value_copy_to_utf8_string(
      libfwevt_xml_value_t *xml_value,
@@ -1163,8 +1135,9 @@ int libfwevt_xml_value_copy_to_utf8_string(
      libfwevt_error_t **error );
 
 /* Retrieves the size of an UTF-16 encoded string of the value data
- * Returns 1 if successful, 0 if value not be retrieved or -1 on error
+ * Returns 1 if successful or -1 on error
  */
+LIBFWEVT_DEPRECATED \
 LIBFWEVT_EXTERN \
 int libfwevt_xml_value_get_utf16_string_size(
      libfwevt_xml_value_t *xml_value,
@@ -1172,10 +1145,53 @@ int libfwevt_xml_value_get_utf16_string_size(
      libfwevt_error_t **error );
 
 /* Copies the value data to an UTF-16 encoded string
- * Returns 1 if successful, 0 if value not be retrieved or -1 on error
+ * Returns 1 if successful or -1 on error
  */
+LIBFWEVT_DEPRECATED \
 LIBFWEVT_EXTERN \
 int libfwevt_xml_value_copy_to_utf16_string(
+     libfwevt_xml_value_t *xml_value,
+     uint16_t *utf16_string,
+     size_t utf16_string_size,
+     libfwevt_error_t **error );
+
+/* Retrieves the size of the value data formatted as an UTF-8 string
+ * The string size includes the end of string character
+ * Returns 1 if successful or -1 on error
+ */
+LIBFWEVT_EXTERN \
+int libfwevt_xml_value_get_data_as_utf8_string_size(
+     libfwevt_xml_value_t *xml_value,
+     size_t *utf8_string_size,
+     libfwevt_error_t **error );
+
+/* Retrieves the data formatted as an UTF-8 string
+ * The string size should include the end of string character
+ * Returns 1 if successful or -1 on error
+ */
+LIBFWEVT_EXTERN \
+int libfwevt_xml_value_get_data_as_utf8_string(
+     libfwevt_xml_value_t *xml_value,
+     uint8_t *utf8_string,
+     size_t utf8_string_size,
+     libfwevt_error_t **error );
+
+/* Retrieves the size of the value data formatted as an UTF-16 string
+ * The string size includes the end of string character
+ * Returns 1 if successful or -1 on error
+ */
+LIBFWEVT_EXTERN \
+int libfwevt_xml_value_get_data_as_utf16_string_size(
+     libfwevt_xml_value_t *xml_value,
+     size_t *utf16_string_size,
+     libfwevt_error_t **error );
+
+/* Retrieves the data formatted as an UTF-16 string
+ * The string size should include the end of string character
+ * Returns 1 if successful or -1 on error
+ */
+LIBFWEVT_EXTERN \
+int libfwevt_xml_value_get_data_as_utf16_string(
      libfwevt_xml_value_t *xml_value,
      uint16_t *utf16_string,
      size_t utf16_string_size,
