--- a/configure.ac
+++ b/configure.ac
@@ -82,8 +82,8 @@ AX_LIBFDATETIME_CHECK_ENABLE
 dnl Check if libfguid or required headers and functions are available
 AX_LIBFGUID_CHECK_ENABLE
 
-dnl Check if libfvalue or required headers and functions are available
-AX_LIBFVALUE_CHECK_ENABLE
+dnl Check if libfwnt or required headers and functions are available
+AX_LIBFWNT_CHECK_ENABLE
 
 dnl Check if libfwevt required headers and functions are available
 AX_LIBFWEVT_CHECK_LOCAL
@@ -116,7 +116,7 @@ CFLAGS="$CFLAGS -Wall";
 
 dnl Check if requires and build requires should be set in spec file
 AS_IF(
- [test "x$ac_cv_libcerror" = xyes || test "x$ac_cv_libcthreads" = xyes || test "x$ac_cv_libcdata" = xyes || test "x$ac_cv_libcnotify" = xyes || test "x$ac_cv_libuna" = xyes || test "x$ac_cv_libfdatetime" = xyes || test "x$ac_cv_libfguid" = xyes || test "x$ac_cv_libfvalue" = xyes],
+ [test "x$ac_cv_libcerror" = xyes || test "x$ac_cv_libcthreads" = xyes || test "x$ac_cv_libcdata" = xyes || test "x$ac_cv_libcnotify" = xyes || test "x$ac_cv_libuna" = xyes || test "x$ac_cv_libfdatetime" = xyes || test "x$ac_cv_libfguid" = xyes || test "x$ac_cv_libfwnt" = xyes],
  [AC_SUBST(
   [libfwevt_spec_requires],
   [Requires:])
@@ -143,7 +143,7 @@ AC_CONFIG_FILES([libcnotify/Makefile])
 AC_CONFIG_FILES([libuna/Makefile])
 AC_CONFIG_FILES([libfdatetime/Makefile])
 AC_CONFIG_FILES([libfguid/Makefile])
-AC_CONFIG_FILES([libfvalue/Makefile])
+AC_CONFIG_FILES([libfwnt/Makefile])
 AC_CONFIG_FILES([libfwevt/Makefile])
 AC_CONFIG_FILES([pyfwevt/Makefile])
 AC_CONFIG_FILES([po/Makefile.in])
@@ -180,7 +180,7 @@ Building:
    libuna support:           $ac_cv_libuna
    libfdatetime support:     $ac_cv_libfdatetime
    libfguid support:         $ac_cv_libfguid
-   libfvalue support:        $ac_cv_libfvalue
+   libfwnt support:          $ac_cv_libfwnt
 
 Features:
    Multi-threading support:  $ac_cv_libcthreads_multi_threading
