--- a/msvscpp/fwevt_test_data_segment/fwevt_test_data_segment.vcproj
+++ b/msvscpp/fwevt_test_data_segment/fwevt_test_data_segment.vcproj
@@ -2,9 +2,9 @@
 <VisualStudioProject
 	ProjectType="Visual C++"
 	Version="9,00"
-	Name="fwevt_test_error"
-	ProjectGUID="{FD36C2F1-1C2A-457C-A585-B39DD8877DEF}"
-	RootNamespace="fwevt_test_error"
+	Name="fwevt_test_data_segment"
+	ProjectGUID="{3C123E2E-5CF0-405A-8E41-ADC0465AE9E0}"
+	RootNamespace="fwevt_test_data_segment"
 	Keyword="Win32Proj"
 	TargetFrameworkVersion="131072"
 	>
@@ -176,7 +176,11 @@
 			UniqueIdentifier="{4FC737F1-C7A5-4376-A066-2A32D752A2FF}"
 			>
 			<File
-				RelativePath="..\..\tests\fwevt_test_error.c"
+				RelativePath="..\..\tests\fwevt_test_data_segment.c"
+				>
+			</File>
+			<File
+				RelativePath="..\..\tests\fwevt_test_memory.c"
 				>
 			</File>
 		</Filter>
@@ -186,11 +190,19 @@
 			UniqueIdentifier="{93995380-89BD-4b04-88EB-625FBE52EBFB}"
 			>
 			<File
+				RelativePath="..\..\tests\fwevt_test_libcerror.h"
+				>
+			</File>
+			<File
 				RelativePath="..\..\tests\fwevt_test_libfwevt.h"
 				>
 			</File>
 			<File
 				RelativePath="..\..\tests\fwevt_test_macros.h"
+				>
+			</File>
+			<File
+				RelativePath="..\..\tests\fwevt_test_memory.h"
 				>
 			</File>
 			<File
