--- a/msvscpp/libfwnt/libfwnt.vcproj
+++ b/msvscpp/libfwnt/libfwnt.vcproj
@@ -2,9 +2,9 @@
 <VisualStudioProject
 	ProjectType="Visual C++"
 	Version="9,00"
-	Name="libfvalue"
-	ProjectGUID="{4A81A573-8E94-4C37-96C6-AAB627CA2D9B}"
-	RootNamespace="libfvalue"
+	Name="libfwnt"
+	ProjectGUID="{43C6AFAD-E3EF-49C1-AA9B-A85E91A94684}"
+	RootNamespace="libfwnt"
 	TargetFrameworkVersion="131072"
 	>
 	<Platforms>
@@ -39,8 +39,8 @@
 			/>
 			<Tool
 				Name="VCCLCompilerTool"
-				AdditionalIncludeDirectories="..\..\include;..\..\common;..\..\libcerror;..\..\libcthreads;..\..\libcdata;..\..\libcnotify;..\..\libuna;..\..\libfdatetime;..\..\libfguid"
-				PreprocessorDefinitions="_CRT_SECURE_NO_DEPRECATE;HAVE_LOCAL_LIBCERROR;HAVE_LOCAL_LIBCTHREADS;HAVE_LOCAL_LIBCDATA;HAVE_LOCAL_LIBCNOTIFY;HAVE_LOCAL_LIBUNA;HAVE_LOCAL_LIBFDATETIME;HAVE_LOCAL_LIBFGUID;HAVE_LOCAL_LIBFVALUE"
+				AdditionalIncludeDirectories="..\..\include;..\..\common;..\..\libcerror;..\..\libcthreads;..\..\libcdata;..\..\libcnotify"
+				PreprocessorDefinitions="_CRT_SECURE_NO_DEPRECATE;HAVE_LOCAL_LIBCERROR;HAVE_LOCAL_LIBCTHREADS;HAVE_LOCAL_LIBCDATA;HAVE_LOCAL_LIBCNOTIFY;HAVE_LOCAL_LIBFWNT"
 				RuntimeLibrary="2"
 				WarningLevel="4"
 				CompileAs="1"
@@ -101,8 +101,8 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="0"
-				AdditionalIncludeDirectories="..\..\include;..\..\common;..\..\libcerror;..\..\libcthreads;..\..\libcdata;..\..\libcnotify;..\..\libuna;..\..\libfdatetime;..\..\libfguid"
-				PreprocessorDefinitions="_CRT_SECURE_NO_DEPRECATE;HAVE_LOCAL_LIBCERROR;HAVE_LOCAL_LIBCTHREADS;HAVE_LOCAL_LIBCDATA;HAVE_LOCAL_LIBCNOTIFY;HAVE_LOCAL_LIBUNA;HAVE_LOCAL_LIBFDATETIME;HAVE_LOCAL_LIBFGUID;HAVE_LOCAL_LIBFVALUE"
+				AdditionalIncludeDirectories="..\..\include;..\..\common;..\..\libcerror;..\..\libcthreads;..\..\libcdata;..\..\libcnotify"
+				PreprocessorDefinitions="_CRT_SECURE_NO_DEPRECATE;HAVE_LOCAL_LIBCERROR;HAVE_LOCAL_LIBCTHREADS;HAVE_LOCAL_LIBCDATA;HAVE_LOCAL_LIBCNOTIFY;HAVE_LOCAL_LIBFWNT"
 				BasicRuntimeChecks="3"
 				SmallerTypeCheck="true"
 				RuntimeLibrary="3"
@@ -151,67 +151,59 @@
 			UniqueIdentifier="{4FC737F1-C7A5-4376-A066-2A32D752A2FF}"
 			>
 			<File
-				RelativePath="..\..\libfvalue\libfvalue_binary_data.c"
+				RelativePath="..\..\libfwnt\libfwnt_access_control_entry.c"
 				>
 			</File>
 			<File
-				RelativePath="..\..\libfvalue\libfvalue_data_handle.c"
+				RelativePath="..\..\libfwnt\libfwnt_access_control_list.c"
 				>
 			</File>
 			<File
-				RelativePath="..\..\libfvalue\libfvalue_error.c"
+				RelativePath="..\..\libfwnt\libfwnt_bit_stream.c"
 				>
 			</File>
 			<File
-				RelativePath="..\..\libfvalue\libfvalue_filetime.c"
+				RelativePath="..\..\libfwnt\libfwnt_debug.c"
 				>
 			</File>
 			<File
-				RelativePath="..\..\libfvalue\libfvalue_floating_point.c"
+				RelativePath="..\..\libfwnt\libfwnt_error.c"
 				>
 			</File>
 			<File
-				RelativePath="..\..\libfvalue\libfvalue_integer.c"
+				RelativePath="..\..\libfwnt\libfwnt_huffman_tree.c"
 				>
 			</File>
 			<File
-				RelativePath="..\..\libfvalue\libfvalue_split_utf16_string.c"
+				RelativePath="..\..\libfwnt\libfwnt_locale_identifier.c"
 				>
 			</File>
 			<File
-				RelativePath="..\..\libfvalue\libfvalue_split_utf8_string.c"
+				RelativePath="..\..\libfwnt\libfwnt_lznt1.c"
 				>
 			</File>
 			<File
-				RelativePath="..\..\libfvalue\libfvalue_string.c"
+				RelativePath="..\..\libfwnt\libfwnt_lzx.c"
 				>
 			</File>
 			<File
-				RelativePath="..\..\libfvalue\libfvalue_support.c"
+				RelativePath="..\..\libfwnt\libfwnt_lzxpress.c"
 				>
 			</File>
 			<File
-				RelativePath="..\..\libfvalue\libfvalue_table.c"
+				RelativePath="..\..\libfwnt\libfwnt_notify.c"
 				>
 			</File>
 			<File
-				RelativePath="..\..\libfvalue\libfvalue_utf16_string.c"
+				RelativePath="..\..\libfwnt\libfwnt_security_descriptor.c"
 				>
 			</File>
 			<File
-				RelativePath="..\..\libfvalue\libfvalue_utf8_string.c"
+				RelativePath="..\..\libfwnt\libfwnt_security_identifier.c"
 				>
 			</File>
 			<File
-				RelativePath="..\..\libfvalue\libfvalue_value.c"
-				>
-			</File>
-			<File
-				RelativePath="..\..\libfvalue\libfvalue_value_entry.c"
-				>
-			</File>
-			<File
-				RelativePath="..\..\libfvalue\libfvalue_value_type.c"
+				RelativePath="..\..\libfwnt\libfwnt_support.c"
 				>
 			</File>
 		</Filter>
@@ -221,115 +213,87 @@
 			UniqueIdentifier="{93995380-89BD-4b04-88EB-625FBE52EBFB}"
 			>
 			<File
-				RelativePath="..\..\libfvalue\libfvalue_binary_data.h"
+				RelativePath="..\..\libfwnt\libfwnt_access_control_entry.h"
 				>
 			</File>
 			<File
-				RelativePath="..\..\libfvalue\libfvalue_codepage.h"
+				RelativePath="..\..\libfwnt\libfwnt_access_control_list.h"
 				>
 			</File>
 			<File
-				RelativePath="..\..\libfvalue\libfvalue_data_handle.h"
+				RelativePath="..\..\libfwnt\libfwnt_bit_stream.h"
 				>
 			</File>
 			<File
-				RelativePath="..\..\libfvalue\libfvalue_definitions.h"
+				RelativePath="..\..\libfwnt\libfwnt_debug.h"
 				>
 			</File>
 			<File
-				RelativePath="..\..\libfvalue\libfvalue_error.h"
+				RelativePath="..\..\libfwnt\libfwnt_definitions.h"
 				>
 			</File>
 			<File
-				RelativePath="..\..\libfvalue\libfvalue_extern.h"
+				RelativePath="..\..\libfwnt\libfwnt_error.h"
 				>
 			</File>
 			<File
-				RelativePath="..\..\libfvalue\libfvalue_filetime.h"
+				RelativePath="..\..\libfwnt\libfwnt_extern.h"
 				>
 			</File>
 			<File
-				RelativePath="..\..\libfvalue\libfvalue_floating_point.h"
+				RelativePath="..\..\libfwnt\libfwnt_huffman_tree.h"
 				>
 			</File>
 			<File
-				RelativePath="..\..\libfvalue\libfvalue_integer.h"
+				RelativePath="..\..\libfwnt\libfwnt_libcdata.h"
 				>
 			</File>
 			<File
-				RelativePath="..\..\libfvalue\libfvalue_libcdata.h"
+				RelativePath="..\..\libfwnt\libfwnt_libcerror.h"
 				>
 			</File>
 			<File
-				RelativePath="..\..\libfvalue\libfvalue_libcerror.h"
+				RelativePath="..\..\libfwnt\libfwnt_libcnotify.h"
 				>
 			</File>
 			<File
-				RelativePath="..\..\libfvalue\libfvalue_libcnotify.h"
+				RelativePath="..\..\libfwnt\libfwnt_locale_identifier.h"
 				>
 			</File>
 			<File
-				RelativePath="..\..\libfvalue\libfvalue_libfdatetime.h"
+				RelativePath="..\..\libfwnt\libfwnt_lznt1.h"
 				>
 			</File>
 			<File
-				RelativePath="..\..\libfvalue\libfvalue_libfguid.h"
+				RelativePath="..\..\libfwnt\libfwnt_lzx.h"
 				>
 			</File>
 			<File
-				RelativePath="..\..\libfvalue\libfvalue_libfwnt.h"
+				RelativePath="..\..\libfwnt\libfwnt_lzxpress.h"
 				>
 			</File>
 			<File
-				RelativePath="..\..\libfvalue\libfvalue_libuna.h"
+				RelativePath="..\..\libfwnt\libfwnt_notify.h"
 				>
 			</File>
 			<File
-				RelativePath="..\..\libfvalue\libfvalue_split_utf16_string.h"
+				RelativePath="..\..\libfwnt\libfwnt_security_descriptor.h"
 				>
 			</File>
 			<File
-				RelativePath="..\..\libfvalue\libfvalue_split_utf8_string.h"
+				RelativePath="..\..\libfwnt\libfwnt_security_identifier.h"
 				>
 			</File>
 			<File
-				RelativePath="..\..\libfvalue\libfvalue_string.h"
+				RelativePath="..\..\libfwnt\libfwnt_support.h"
 				>
 			</File>
 			<File
-				RelativePath="..\..\libfvalue\libfvalue_support.h"
+				RelativePath="..\..\libfwnt\libfwnt_types.h"
 				>
 			</File>
 			<File
-				RelativePath="..\..\libfvalue\libfvalue_table.h"
-				>
-			</File>
-			<File
-				RelativePath="..\..\libfvalue\libfvalue_types.h"
-				>
-			</File>
-			<File
-				RelativePath="..\..\libfvalue\libfvalue_unused.h"
-				>
-			</File>
-			<File
-				RelativePath="..\..\libfvalue\libfvalue_utf16_string.h"
-				>
-			</File>
-			<File
-				RelativePath="..\..\libfvalue\libfvalue_utf8_string.h"
-				>
-			</File>
-			<File
-				RelativePath="..\..\libfvalue\libfvalue_value.h"
-				>
-			</File>
-			<File
-				RelativePath="..\..\libfvalue\libfvalue_value_entry.h"
-				>
-			</File>
-			<File
-				RelativePath="..\..\libfvalue\libfvalue_value_type.h"
+				RelativePath="..\..\libfwnt\libfwnt_unused.h"
 				>
 			</File>
 		</Filter>
