Worked on format support

--- a/libfwevt/Makefile.am
+++ b/libfwevt/Makefile.am
@@ -48,6 +48,7 @@ libfwevt_la_SOURCES = \
 	libfwevt_types.h \
 	libfwevt_unused.h \
 	libfwevt_xml_document.c libfwevt_xml_document.h \
+	libfwevt_xml_string.c libfwevt_xml_string.h \
 	libfwevt_xml_tag.c libfwevt_xml_tag.h \
 	libfwevt_xml_template_value.c libfwevt_xml_template_value.h \
 	libfwevt_xml_token.c libfwevt_xml_token.h \
