--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -40,6 +40,7 @@ check_PROGRAMS = \
 	fwevt_test_date_time \
 	fwevt_test_error \
 	fwevt_test_event \
+	fwevt_test_integer \
 	fwevt_test_keyword \
 	fwevt_test_level \
 	fwevt_test_manifest \
@@ -110,6 +111,17 @@ fwevt_test_event_SOURCES = \
 	fwevt_test_unused.h
 
 fwevt_test_event_LDADD = \
+	../libfwevt/libfwevt.la \
+	@LIBCERROR_LIBADD@
+
+fwevt_test_integer_SOURCES = \
+	fwevt_test_integer.c \
+	fwevt_test_libcerror.h \
+	fwevt_test_libfwevt.h \
+	fwevt_test_macros.h \
+	fwevt_test_unused.h
+
+fwevt_test_integer_LDADD = \
 	../libfwevt/libfwevt.la \
 	@LIBCERROR_LIBADD@
 
