--- a/.gitignore
+++ b/.gitignore
@@ -134,6 +134,7 @@ stamp-h[1-9]
 /tests/fwevt_test_date_time
 /tests/fwevt_test_error
 /tests/fwevt_test_event
+/tests/fwevt_test_floating_point
 /tests/fwevt_test_integer
 /tests/fwevt_test_keyword
 /tests/fwevt_test_level
