--- a/include/libfwevt.h.in
+++ b/include/libfwevt.h.in
@@ -1078,7 +1078,7 @@ int libfwevt_xml_value_copy_data(
      libfwevt_error_t **error );
 
 /* Retrieves the value data as a 8-bit integer value
- * Returns 1 if successful, 0 if value not be retrieved or -1 on error
+ * Returns 1 if successful, 0 if value cannot be retrieved or -1 on error
  */
 LIBFWEVT_EXTERN \
 int libfwevt_value_get_data_as_8bit_integer(
@@ -1087,7 +1087,7 @@ int libfwevt_value_get_data_as_8bit_integer(
      libfwevt_error_t **error );
 
 /* Retrieves the value data as a 32-bit integer value
- * Returns 1 if successful, 0 if value not be retrieved or -1 on error
+ * Returns 1 if successful, 0 if value cannot be retrieved or -1 on error
  */
 LIBFWEVT_EXTERN \
 int libfwevt_value_get_data_as_32bit_integer(
@@ -1096,7 +1096,7 @@ int libfwevt_value_get_data_as_32bit_integer(
      libfwevt_error_t **error );
 
 /* Retrieves the value data as a 64-bit integer value
- * Returns 1 if successful, 0 if value not be retrieved or -1 on error
+ * Returns 1 if successful, 0 if value cannot be retrieved or -1 on error
  */
 LIBFWEVT_EXTERN \
 int libfwevt_value_get_data_as_64bit_integer(
@@ -1105,7 +1105,7 @@ int libfwevt_value_get_data_as_64bit_integer(
      libfwevt_error_t **error );
 
 /* Retrieves the value data as a 64-bit FILETIME value
- * Returns 1 if successful, 0 if value not be retrieved or -1 on error
+ * Returns 1 if successful, 0 if value cannot be retrieved or -1 on error
  */
 LIBFWEVT_EXTERN \
 int libfwevt_value_get_data_as_filetime(
