--- a/libfwevt.ini
+++ b/libfwevt.ini
@@ -3,7 +3,7 @@ description: "libfwevt is a library for Windows XML Event Log (EVTX) data types.
 name: "libfwevt"
 status: "experimental"
 year_of_creation: "2011"
-features: ["debug_output"]
+features: ["debug_output", "ossfuzz", "python_bindings"]
 
 [library]
 description: "Library to support the Windows XML Event Log (EVTX) data types"
